# Gitway

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Gitway-PRD-v1.0.md  NOTICE.md  README.md  SKILL.md  flake.nix  justfile  shell.nix  steelbore-dual-mode-cli-sfrs.md  steelbore-dual-mode-cli-sfrs.txt
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  compat.yml  release.yml
docs/: IDE_GUIDE.md  PRD.md  Plan.md  TODO.md
docs/blog/: 2026-05-05-gitway-1.0.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_key_parse.rs  fuzz_known_hosts.rs
gitssh-cli/src/: main.rs
gitssh-lib/: README.md
gitssh-lib/src/: auth.rs  config.rs  error.rs  relay.rs
gitssh-lib/tests/: test_connection.rs
gitway-cli/: Cargo.toml  README.md
gitway-cli/src/: agent.rs  algorithms.rs  cli.rs  config.rs  hosts.rs  keygen.rs  main.rs  sign.rs
gitway-cli/tests/: agent_client.rs  agent_daemon.rs  algorithms.rs  diagnostic.rs  retry.rs  ssh_keygen_compat.rs
gitway-lib/: Cargo.toml  README.md
gitway-lib/benches/: throughput.rs
gitway-lib/src/: allowed_signers.rs  auth.rs  config.rs  diagnostic.rs  error.rs  hostkey.rs  keygen.rs  lib.rs  relay.rs  session.rs  sshsig.rs  time.rs
gitway-lib/src/agent/: askpass.rs  client.rs  daemon.rs  mod.rs
gitway-lib/tests/: test_clone.rs  test_connection.rs
packaging/: README.md
packaging/arch/: PKGBUILD  PKGBUILD-git
packaging/systemd/: gitway-agent.service
scripts/: run-git-transport-tests.sh
tests/: test_connection.rs
