# SPDX-License-Identifier: GPL-3.0-or-later
[workspace]
members  = ["gitway-lib", "gitway-cli"]
exclude  = ["fuzz"]
resolver = "2"

[workspace.package]
version    = "0.8.1"
edition    = "2021"
license    = "GPL-3.0-or-later"
authors    = ["Mohamed Hammad <MJ@S3cure.me>"]
repository = "https://github.com/steelbore/gitway"
homepage   = "https://github.com/steelbore/gitway"
rust-version = "1.85"

# ── Shared dependencies ───────────────────────────────────────────────────────

[workspace.dependencies]
# Use aws-lc-rs crypto backend: Non-FIPS builds require no CMake/bindgen/Go,
# and it provides post-quantum cryptography (PQC) support for future-proofing.
# See: https://aws.github.io/aws-lc-rs/ and https://github.com/aws/aws-lc/blob/main/crypto/fipsmodule/PQREADME.md
russh = { version = "0.59", default-features = false, features = ["flate2", "aws-lc-rs", "rsa"] }

tokio     = { version = "1",    features = ["io-util", "io-std", "rt-multi-thread", "net", "sync", "macros", "signal", "time", "process"] }
thiserror = "2"
log       = "0.4"
dirs      = "6"
zeroize   = "1.7"

clap       = { version = "4", features = ["derive"] }
env_logger = "0.11"
rpassword  = "7"
mimalloc   = "0.1"

# Structured JSON output (SFRS Rule 1, 5)
serde_json = "1"

# Pure-Rust OpenSSH key format and SSHSIG (for `gitway keygen` / `gitway sign`).
# `aws-lc-rs` via russh remains the transport crypto; `ssh-key`'s RustCrypto
# stack (ed25519-dalek 2.x, rsa 0.9, p256/384/521) is used only for keygen
# and signature formatting — russh's signer traits do not expose the SSHSIG
# blob format ergonomically. Both crypto stacks declare #[forbid(unsafe_code)].
ssh-key    = { version = "0.6.7", default-features = false, features = [
    "ed25519", "ecdsa", "rsa", "p256", "p384", "p521", "encryption", "std",
] }
sha2       = "0.10"
rand_core  = { version = "0.6", features = ["std", "getrandom"] }

# SSH agent wire-protocol client and server (Phase 2 client + Phase 3 daemon).
# Default features include `agent` which brings the async server side
# (`Session` trait, `listen`, named-pipe listener). The blocking client
# module is always on, so Phase 2 code keeps compiling unchanged.
# Compatible with our `ssh-key = "0.6.7"` — cargo unifies with the lib's
# declared `ssh-key = "0.6"` dep.
ssh-agent-lib = "0.5.2"

# Unix-only signal / fork / setsid primitives used by the agent daemon
# (Phase 3).
nix = { version = "0.29", features = ["fs", "process", "signal", "user"] }

# Direct Ed25519 signer used by the agent daemon. `ssh-key` already pulls
# this in transitively; declaring it explicitly lets the daemon signing
# code reference it directly.
ed25519-dalek = "2"

# The `signature::Signer` trait that `ssh-key::PrivateKey` implements —
# needed for the daemon's generic sign path that covers Ed25519 + ECDSA.
signature      = "2"

# RSA signer used by the agent daemon. `ssh-key` 0.6.7 bundles this version
# internally for key parsing; we depend on it directly so the daemon can
# drive `rsa::pkcs1v15::SigningKey<ShaN>` with the digest picked by
# `SignRequest.flags` at call time (rsa-sha2-256 vs rsa-sha2-512 vs ssh-rsa).
rsa           = "0.9"

# Dev / test helpers
tempfile   = "3"

# ── Workspace-wide lints ──────────────────────────────────────────────────────

[workspace.lints.rust]
ambiguous_negative_literals     = "warn"
missing_debug_implementations   = "warn"
redundant_imports               = "warn"
redundant_lifetimes             = "warn"
trivial_numeric_casts           = "warn"
unsafe_op_in_unsafe_fn          = "warn"
unused_lifetimes                = "warn"

[workspace.lints.clippy]
cargo      = { level = "warn", priority = -1 }
complexity  = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
perf        = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }
suspicious  = { level = "warn", priority = -1 }

allow_attributes_without_reason      = "warn"
assertions_on_result_states          = "warn"
clone_on_ref_ptr                     = "warn"
deref_by_slicing                     = "warn"
empty_drop                           = "warn"
empty_structs_with_brackets          = "warn"
fn_to_numeric_cast_any               = "warn"
map_err_ignore                       = "warn"
redundant_type_annotations           = "warn"
semicolon_outside_block              = "warn"
string_to_string                     = "warn"
undocumented_unsafe_blocks           = "warn"
unnecessary_safety_comment           = "warn"
unnecessary_safety_doc               = "warn"
unused_result_ok                     = "warn"

# Structured logging uses literal strings with format args intentionally.
literal_string_with_formatting_args  = "allow"
# `module_name_repetitions` fires often in well-named pub API types.
module_name_repetitions              = "allow"

# russh pulls in crypto crates at different versions; mismatch is unavoidable.
multiple_crate_versions   = "allow"

# GitwayError carries a std::backtrace::Backtrace (heap-allocated).  Boxing
# it in every return type would harm ergonomics for no meaningful benefit on
# the non-hot authentication path.
result_large_err          = "allow"

cargo_common_metadata     = "allow"
