# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name        = "gitssh"
description = "Purpose-built SSH transport client for Git operations against GitHub."
keywords    = ["ssh", "git", "github", "cli"]
categories  = ["command-line-utilities", "network-programming"]

version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[[bin]]
name = "gitssh"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
gitssh-lib = { path = "../gitssh-lib" }

russh.workspace      = true
tokio.workspace      = true
log.workspace        = true
clap.workspace       = true
env_logger.workspace = true
rpassword.workspace  = true
mimalloc.workspace   = true
zeroize.workspace    = true
