# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name        = "gitway"
description = "Purpose-built SSH transport client for Git hosting services (GitHub, GitLab, Codeberg)."
keywords    = ["ssh", "git", "github", "gitlab", "cli"]
categories  = ["command-line-utilities", "network-programming"]
readme      = "README.md"
documentation = "https://github.com/steelbore/gitway#readme"

version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[[bin]]
name = "gitway"
path = "src/main.rs"

# Shim for `ssh-keygen` — byte-compatible surface for the `gpg.ssh.program`
# slot so `git -c gpg.format=ssh -c gpg.ssh.program=gitway-keygen ...` works
# without OpenSSH installed. See `src/bin/gitway-keygen.rs` for the
# accepted flag set.
[[bin]]
name = "gitway-keygen"
path = "src/bin/gitway-keygen.rs"

# Shim for `ssh-add` — argv-compatible for IDE / credential-manager
# integrations that shell out to `ssh-add` by name. Unix-only (Phase 2
# agent client is over a Unix domain socket; Windows pipe support is
# Phase 3). See `src/bin/gitway-add.rs`.
[[bin]]
name = "gitway-add"
path = "src/bin/gitway-add.rs"

# ── Debian packaging (cargo-deb) ──────────────────────────────────────────────
[package.metadata.deb]
section  = "vcs"
priority = "optional"
assets   = [
  # Install the transport binary.
  ["target/release/gitway", "usr/bin/", "755"],
  # Install the ssh-keygen-compat shim for `gpg.ssh.program=gitway-keygen`.
  ["target/release/gitway-keygen", "usr/bin/", "755"],
  # Install the ssh-add-compat shim (Unix-only — Windows is skipped via
  # the release workflow's matrix).
  ["target/release/gitway-add", "usr/bin/", "755"],
  # Install documentation.
  ["../README.md", "usr/share/doc/gitway/README.md", "644"],
  ["../LICENSE",   "usr/share/licenses/gitway/LICENSE", "644"],
]

# ── RPM packaging (cargo-generate-rpm) ───────────────────────────────────────
[package.metadata.generate-rpm]
assets = [
  { source = "target/release/gitway",        dest = "/usr/bin/gitway",        mode = "755" },
  { source = "target/release/gitway-keygen", dest = "/usr/bin/gitway-keygen", mode = "755" },
  { source = "target/release/gitway-add",    dest = "/usr/bin/gitway-add",    mode = "755" },
  { source = "../README.md",                 dest = "/usr/share/doc/gitway/README.md", mode = "644", doc = true },
  { source = "../LICENSE",                   dest = "/usr/share/licenses/gitway/LICENSE", mode = "644", doc = true },
]

[package.metadata.generate-rpm.requires]

[lints]
workspace = true

[dependencies]
gitway-lib = { version = "0.5.0", path = "../gitway-lib" }

russh.workspace      = true
tokio.workspace      = true
log.workspace        = true
clap.workspace       = true
env_logger.workspace = true
rpassword.workspace  = true
mimalloc.workspace   = true
zeroize.workspace    = true
serde_json.workspace = true
ssh-key.workspace    = true
dirs.workspace       = true

[dev-dependencies]
tempfile = { workspace = true }
