# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name          = "gitway-lib"
description   = "Core SSH transport library for Git hosting services (GitHub, GitLab, Codeberg, and self-hosted)."
keywords      = ["ssh", "git", "gitlab", "codeberg", "transport"]
categories    = ["network-programming", "authentication"]
readme        = "README.md"
documentation = "https://docs.rs/gitway-lib"

version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
russh.workspace    = true
tokio.workspace    = true
thiserror.workspace = true
log.workspace      = true
dirs.workspace     = true
zeroize.workspace  = true

# SSH key format + SSHSIG signing (phase 1: keygen, sign, verify).
ssh-key.workspace   = true
sha2.workspace      = true
rand_core.workspace = true

# SSH agent wire-protocol client + server (phase 2 client, phase 3 daemon).
# Unix-only wire-format path for now; Windows named-pipe support is
# phase 3 stretch goal.
[target.'cfg(unix)'.dependencies]
ssh-agent-lib.workspace = true
nix.workspace           = true
ed25519-dalek.workspace = true
signature.workspace     = true
rsa.workspace           = true
async-trait             = "0.1"
futures                 = "0.3"

[dev-dependencies]
tokio     = { workspace = true }
tempfile  = { workspace = true }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name    = "throughput"
harness = false
