# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name        = "gitway-lib"
description = "DEPRECATED: superseded by `anvil-ssh` (https://crates.io/crates/anvil-ssh / https://github.com/Steelbore/Anvil).  This in-tree shim re-exports the Anvil API under the legacy `gitway_lib::*` module path."
keywords    = ["ssh", "git", "deprecated"]
categories  = ["network-programming", "authentication"]
readme      = "README.md"
documentation = "https://docs.rs/gitway-lib"
publish     = false

version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anvil-ssh = { workspace = true }
